2007-12-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Modify some widgets background color if they are inside notebooks.
	(#488850, Federico Pelloni)

2007-12-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c: (clearlooks_draw_tab):
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_tab):
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	(clearlooks_inverted_draw_tab):
	Port the fix for bug #475291 to the other clearlooks styles.

2007-12-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Work around evolution ETree and ETable headers
	(#492372, Michael Monreal)

2007-12-09  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_focus):
	* engines/clearlooks/src/clearlooks_types.h:
	Added CL_FOCUS_UNKNOWN and exit the focus drawing function
	for it

2007-12-09  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Implemented focus_button_flat custom drawing

2007-12-09  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/hc/src/hc_gtk2_engine.c: (hc_style_init):
	Default edge_thickness to be the same as the x/ythickness.

2007-12-09  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_focus):
	* engines/clearlooks/src/clearlooks_types.h:
	Add CL_FOCUS_BUTTON_FLAT and correct/added some comments.

2007-12-08  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/hc/src/hc-style.c: (hc_draw_shadow),
	(hc_draw_shadow_gap), (hc_draw_extension):
	Now *really* fixed :)

2007-12-08  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/hc/src/hc-style.c: (hc_draw_shadow),
	(hc_draw_shadow_gap), (hc_draw_extension):
	Fix #501816
