@@ -513,6 +513,8 @@ clearlooks_inverted_draw_tab (cairo_t *cr,
 			case CL_GAP_RIGHT:
 				pattern = cairo_pattern_create_linear (1, 0, width-2, 0);
 				break;
+			default:
+				pattern = NULL;
 		}
 
 		ge_cairo_rounded_rectangle (cr, 0, 0, width-1, height-1, radius, params->corners);
@@ -544,6 +546,8 @@ clearlooks_inverted_draw_tab (cairo_t *cr,
 			case CL_GAP_RIGHT:
 				pattern = cairo_pattern_create_linear (0, 0, width, 0);
 				break;
+			default:
+				pattern = NULL;
 		}
 	
 		ge_cairo_rounded_rectangle (cr, 0, 0, width-1, height-1, radius, params->corners);
@@ -581,6 +585,8 @@ clearlooks_inverted_draw_tab (cairo_t *cr,
 			case CL_GAP_RIGHT:
 				pattern = cairo_pattern_create_linear (2, 2, width, 2);
 				break;
+			default:
+				pattern = NULL;
 		}
 		
 		cairo_pattern_add_color_stop_rgb (pattern, 0.0,        stripe_border->r, stripe_border->g, stripe_border->b);
